<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.fluffy.luffs</groupId>
    <artifactId>weight-converter</artifactId>
    <version>1.1.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    
    <name>WeightConverter</name>
    
    <developers>
        <developer>
            <name>Chris Luff</name>
        </developer>
    </developers>
    
    <licenses>
        <license>
            <name>MIT License</name>
        </license>
    </licenses>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>com.fluffy.luffs.weight.converter.WeightConverter</mainClass>
        <javafx.version>[17.0,18.0)</javafx.version>
        <gluon.attach>4.0.15</gluon.attach>
        <graalVMVersion>22.1.0.1-Final</graalVMVersion>
        <ios.release.providedSigningIdentity/>
        <ios.release.providedProvisioningProfile/>
    </properties>
    
    <scm>
        <connection>scm:git:https://github.com/cbm64chris/${project.artifactId}.git</connection>
        <developerConnection>scm:git:https://github.com/cbm64chris/${project.artifactId}.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/cbm64chris/${project.artifactId}</url>
    </scm>
    
    <issueManagement>
        <system>git</system>
        <url>https://github.com/cbm64chris/${project.artifactId}/issues</url>
    </issueManagement>

    <ciManagement>
        <system>travis</system>
        <url>https://travis-ci.org/github/cbm64chris/weight-converter</url>
    </ciManagement>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.0.0-M1</version>
                <configuration>
                    <pushChanges>false</pushChanges>
                    <tagNameFormat>${project.version}</tagNameFormat>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>1.0.15</version>                
                <configuration>
                    <reflectionList>
                        <list>com.fluffy.luffs.weight.converter.controllers.WeightConverterController</list>
                        <list>javafx.geometry.Insets</list>
                        <list>javafx.scene.control.Label</list>
                        <list>javafx.scene.control.TextField</list>
                        <list>javafx.scene.control.ListView</list>
                        <list>javafx.scene.text.Font</list>
                        <list>javafx.scene.control.ChoiceBox</list>
                        <list>javafx.fxml.FXMLLoader</list>
                    </reflectionList>

                    <attachList>
                        <list>statusbar</list>
                        <list>storage</list>
                        <list>display</list>
                        <list>lifecycle</list>
                    </attachList>
                    
                    <target>${build.target}</target>
                    <graalvmHome>/Library/Java/JavaVirtualMachines/graalvm-svm-java17-darwin-gluon-${graalVMVersion}/Contents/Home</graalvmHome>
                    <mainClass>${mainClass}</mainClass>
                    
                    <releaseConfiguration>      
                        <bundleName>WeightConverter</bundleName>
                        <bundleVersion>${project.version}</bundleVersion>
                        <bundleShortVersion>${project.version}</bundleShortVersion>
                        <providedSigningIdentity>${ios.release.providedSigningIdentity}</providedSigningIdentity>
                        <providedProvisioningProfile>${ios.release.providedProvisioningProfile}</providedProvisioningProfile>
                    </releaseConfiguration>

                    <verbose>true</verbose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                    <options>
                        <option>--enable-preview</option>
                    </options>
                    
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                    </execution>
                    <execution>
                        <!-- Configuration for manual attach debugging -->
                        <!-- Usage: mvn clean javafx:run@debug -->
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>--enable-preview</option>
                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE debugging -->
                        <id>ide-debug</id>
                        <configuration>
                            <options>
                                <option>--enable-preview</option>
                                <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE profiling -->
                        <id>ide-profile</id>
                        <configuration>
                            <options>
                                <option>--enable-preview</option>
                                <option>${profiler.jvmargs.arg1}</option>
                                <option>${profiler.jvmargs.arg2}</option>
                                <option>${profiler.jvmargs.arg3}</option>
                                <option>${profiler.jvmargs.arg4}</option>
                                <option>${profiler.jvmargs.arg5}</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>lifecycle</artifactId>
            <version>${gluon.attach}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>display</artifactId>
            <version>${gluon.attach}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>storage</artifactId>
            <version>${gluon.attach}</version>
            <classifier>${attach.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>settings</artifactId>
            <version>${gluon.attach}</version>
            <classifier>${attach.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>store-review</artifactId>
            <version>${gluon.attach}</version>
            <classifier>${attach.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>util</artifactId>
            <version>${gluon.attach}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>statusbar</artifactId>
            <version>${gluon.attach}</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.1.214</version>
        </dependency>
        <dependency>
            <groupId>org.tmatesoft.sqljet</groupId>
            <artifactId>sqljet</artifactId>
            <version>1.1.13</version>
        </dependency>
    </dependencies>
    
    <profiles>
        <profile>
            <id>ios</id>
            <properties>
                <attach.classifier>ios</attach.classifier>
                <build.target>ios</build.target>
                <sqlite.platform>ios</sqlite.platform>
            </properties>
        </profile>
        <profile>
            <id>desktop</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <attach.classifier>desktop</attach.classifier>
                <build.target>host</build.target>
                <sqlite.platform>Mac</sqlite.platform>
            </properties>
        </profile>
    </profiles>
    
    <repositories>
        <repository>
            <id>Gluon</id>
            <url>https://nexus.gluonhq.com/nexus/content/repositories/releases</url>
        </repository>
    </repositories>
    
    <pluginRepositories>
        <pluginRepository>
            <id>gluon-releases</id>
            <url>http://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
        </pluginRepository>
    </pluginRepositories>
    
</project>